--- a/src/views/account.ejs
+++ b/src/views/account.ejs
@@ -128,6 +128,7 @@
           <div class="modal-body">
             <div class="form-default">
               <form method="POST" action="/account/change-email">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                 <div class="form-group">
                   <label for="shopEmail" class="control-label"
                     >Địa chỉ email</label
